# grafen

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
assets/: database.json  water_block.gro
include/: database.json  database_with_linked_file.json
src/: config.rs  coord.rs  coords.rs  cylinder.rs  database.rs  describe.rs  error.rs  grids.rs  iterator.rs  lattice.rs  lib.rs  main.rs  output.rs  read_conf.rs  substrates.rs  system.rs
src/io/: gromos.rs  mod.rs
src/substrate/: distribution.rs  lattice.rs  mod.rs  points.rs
src/surface/: cuboid.rs  cylinder.rs  distribution.rs  lattice.rs  mod.rs  points.rs  sheet.rs
src/volume/: cuboid.rs  cylinder.rs  mod.rs  sphere.rs
tests/: create_substrates.rs
