[package]
name = "grafen"
version = "0.3.3"
authors = ["Petter Johansson <pettjoha@kth.se>"]
description = "Create graphene and other substrates for use in molecular dynamics simulations."
repository = "https://github.com/pjohansson/grafen"
categories = ["command-line-utilities", "science"]
keywords = ["gromacs", "molecular-dynamics", "substrates"]
readme = "README.md"
license = "Unlicense"

[badges]
travis-ci = { repository = "pjohansson/grafen", branch = "master"}

[dependencies]
ansi_term = "^0.9.0"
clap = "~2.23.0"

[[bin]]
path = "src/bin/main.rs"
name = "grafen_cli"
