[package]
name = "grafen"
version = "0.9.2-dev"
authors = ["Petter Johansson <pettjoha@kth.se>"]
description = "Create graphene and other substrates for use in molecular dynamics simulations."
repository = "https://github.com/pjohansson/grafen"
documentation = "https://docs.rs/crate/grafen"
categories = ["command-line-utilities", "science"]
keywords = ["gromacs", "molecular-dynamics", "substrates"]
readme = "README.md"
license = "Unlicense"

[badges]
travis-ci = { repository = "pjohansson/grafen", branch = "master" }

[dependencies]
colored = "1.6"
dialoguer = "0.1"
mdio = { path = "/home/petter/Work/mdio", version = "0.1" }
rand = "~0.3.0"
serde = "^1.0.8"
serde_json = "1.0"
serde_derive = "^1.0.8"
structopt = "0.1.6"
structopt-derive = "0.1.6"

[[bin]]
path = "src/bin/main.rs"
name = "grafen"
doc = false
